8232730: Shenandoah: Traversal should not CAS the roots

Reviewed-by: zgu, rkennke